update output examples to show the complete scraped sheet

--- a/example-output/output-allsections-longtable.tex
+++ b/example-output/output-allsections-longtable.tex
@@ -118,6 +118,91 @@
  κοτόπουλο                                  & poulet                                                           & دجاج                             & مرغ                 & mirîşk                     & مرغی                                                  & মুরগি                                       \\
  Δεν τρώω χοιρινό                           & Je ne mange pas de porc                                          & لا آكل لحم الخنزير               & من گوشت خوک نمیخورم & Ez goştê beraz naxwim      & میں سور کا گوشت نہیں کھاتا                            & আমি শুকরের মাংস খাইনা                       \\
  Είμαι χορτοφάγος. Δεν τρώω κρέας και ψάρι. & je suis végétarien(ne). Je ne mange pas de viande ni de poisson. & انا نباتي                        & گوشت و ماهی نمیخورم & Ez vejeteryaneke me        & میں صرف سبزی کھاتا ہوں. مجھے گوشت یا مچھلی نہیں چاہیے & আমি ভেজিট্যারিয়ান / আমি কোনো মাছ-মাংস খাইনা \\
+ αυγά                                       & œufs                                                             & البيض                            & تخم مرغ  /          & hêk                        & انڈے                                                  & ডিম                                         \\
+ ψάρι                                       & poisson                                                          & السمك                            & ماهی                & masî                       & مچھلی                                                 & মাছ                                         \\
+ ψωμί                                       & (du) pain                                                        & الخبز / خبز, عيش                 & نان خشک             & nan                        & روٹی                                                  & রুটি                                        \\
+ Νερό                                       & (de l') eau                                                      & ماء، مياه       / مي             & آب                  & Av                         & پانی                                                  & পানি                                        \\
+ γάλα                                       & (du) lait                                                        & الحليب/ اللبن                    & شیر                 & şîr                        & دودھ                                                  & দুধ                                         \\
+ καφέ                                       & café                                                             & القهوة                           & کوفی / قهوه         & qahwe                      & کوفی                                                  & কফি                                         \\
+ τσάι                                       & thé                                                              & الشاي                            & چای                 & çay                        & چائے                                                  & চা                                          \\
+ Δεν πίνω αλκοόλ                            & Je ne bois pas d'alcool                                          & لا أشرب الكحول                   & من الکل نمیخورم     & Ez alkol venaxim           & میں شراب نہیں پیتا                                    & আমি মদ/এলকোহল খাই না                        \\
+ φρούτα                                     & fruits                                                           & الفاكهة                          & میوه                & fêkî                       & پھل                                                   & ফল                                          \\
+ μήλο                                       & pomme                                                            & التفاح                           & سیب                 & sêv                        & سیب                                                   & আপেল                                        \\
+ πορτοκάλι                                  & orange                                                           & البرتقال                         & نارنج               & porteqal                   & سنترہ / مالٹا                                         & কমলা                                        \\
+ ροδάκινο                                   & pêche                                                            & دراق                             & شفت آلو             & xox                        & آڑو                                                  & পীচ                                         \\
+ λαχανικά                                   & légumes                                                          & الخضروات                         & سبزیجات             & zebze/zewze                & سبزیاں                                                & সবজি                                        \\
+ πατάτες                                    & pommes de terre                                                  & البطاطا                          & کج آلو              & patat/kartol               & آلو                                                  & আলু                                         \\
+ φασόλια                                    & haricots                                                         & فاصولياء /فول                    & لوبیا               & fasûlî                     & لوبیا                                                 & বরবটি / সীম                                 \\
+ αρακάς                                     & petits pois                                                      & البازلاء/ البسلة                 & نخود                & şoqîl                      & مٹر                                                   & মটরশুটি                                     \\
+ ρεβίθι                                     & pois chiches                                                     & حمص حب                           & شور نخود            & nok                        & چھولا / چنے                                           &                                             \\
+ μελιτζάνα                                  & aubergine                                                        & باتنجان                          & باذنجان سیاه        & balcan/bacanê reş          & بینگن                                                 &                                             \\
+ καρότα                                     & carottes                                                         & الجزر                            & زردک                & gizêr                      & گاجر                                                  & গাজর                                        \\
+ ντομάτες                                   & tomates                                                          & الطماطم (البندورة)               & باذنجان رومی        & fringî                     & ٹماٹر                                                 & টমেটো                                       \\
+ ζάχαρη                                     & sucre                                                            & السكر                            & شکر                 & şekir                      & شکر                                                   & চিনি                                        \\
+ αλεύρι                                     & farine                                                           & طحين                             & آرد                 & ard                        & آٹا                                                  & আটা / ময়দা                                  \\
+ μέλι                                       & miel                                                             & العسل                            & عسل                 & hingiv                     & شہد                                                   & মধু                                         \\
+ τυρί                                       & fromage                                                          & الجبن                            & پنیر                & penêr                      & پنیر / چیز                                            & পনির / চিজ                                  \\
+ αλάτι                                      & sel                                                              & الملح                            & نمک                 & xwê                        & نمک                                                   & লবন                                         \\
+ πιπέρι                                     & poivre                                                           & بهار أسود                        & مرچ سرخ             & îsota reş                  & گول مرچ                                               & গোলমরিচ                                     \\
+ ρύζι                                       & riz                                                              & رز                               & برنج                & birinc                     & چانول                                                 & চাল / ভাত                                   \\
+ ζυμαρικά, μακαρόνια                        & pâtes                                                            & معكرونة                          & ماکارونی            & meqarne                    & پاستہ / نوڈل                                          & নুডল                                        \\
+ σούπα                                      & soupe                                                            & شوربة                            & آش                  & şorbe                      & سوپ                                                   & স্যুপ                                       \\
+ βούτυρο                                    & beurre                                                           & زبدة                             &                     & nivîşk                     & مکّھن                                                 & মাখন                                        \\
+ λάδι                                       & huile                                                            & زيت                              & تیل                 & rûn                        & تیل                                                   & তেল                                         \\
+ πιρούνι                                    & Fourchette                                                       & شوكة                             & پنجا                & çetel                      & کانٹا                                                 & কাঁটাচামচ                                   \\
+ κουτάλι                                    & Cuiller                                                          & معلقة                            & قاشق / چمچه         & kevçî                      & چمچا                                                  & টেবিল চামচ / চা চামচ                        \\
+ μαχαίρι                                    & Couteau                                                          & سكينة  / سكين                    & کارد                & kêr                        & چاقو                                                  & ছুরি / চাকু                                 \\
+ πιάτο                                      & Assiette                                                         & طبق/ صحن                         & بشقاب               & sênîk, teyfik              & پلیٹ                                                  & থালা                                        \\
+ ποτήρι                                     & verre                                                            & كباية     / كاسه / كأس           & گیلاس               & qedeh / berçavk            & گلاس                                                  & গ্লাস                                       \\
+ τσαγιέρα                                   & théière                                                          & ابريق شاي                        & چاینک               & çaydan                     & چائے دانی                                             & চায়ের কেতলি                                 \\
+\midrule
+ Ρούχα           & Vêtements       & ملابس / أواعي           &  لباس     & Cil              & کپڑے                                & জামাকাপড়     \\
+\midrule
+ μπλούζα         & une chemise     & قميص                    & بلوز      & Gomlek           & قمیض                                & শার্ট / জামা \\
+ φόρεμα          & une robe        & فستان                   & لباس      & Kiras            & لباس/کپڑے                           & জামা         \\
+ φούστα          & une jupe        & تنورة                   & دامن      & Eteg             & اسکرٹ                               & স্কার্ট      \\
+ παντελόνι       & pantalon        & بِنْطلون/ سروال         & پتلون     & Şal              & پینٹ / پتلون                        & প্যান্ট      \\
+ πουλόβερ        & pull, pullover  & سترة من الصوف/ كنزة صوف & جمپر      & fanêre           & سویٹر                               & সুয়েটার      \\
+ ζακέτα-παλτό    & veste / manteau & جاكِيت/ مِعْطَف         & ژاکت      & çakêt            & جیکٹ                                & জ্যাকেট      \\
+ πέπλο / μαντήλα & un voile        & الحجاب/خمار             & حجاب      & demsal           & حجاب / ڈپٹا / نقاب                  & হিজাব/ ওড়না  \\
+ παπούτσια       & chaussures      & أحذية/ صباطات           & بوت / کفش & sol              & جوتے                                & জুতা         \\
+ γάντια          & gants           & قفازات                  & دستکش     & cepik            & دستانے/گلوز                         & হাতমোজা      \\
+ κάλτσες         & chaussettes     & كلسات                   & جوراب     & gore             & موزے                                & মোজা         \\
+ εσώρουχα        & sous-vêtements  & ملابس داخلية            & زیر جامه  & bincilik / Derpî & انڈر ویئر / جانگھیا / /اندرونی کپڑے & অন্তর্বাস    \\
+\midrule
+ Διάφορα             & Autres                      &                                 & مختلف      & Yên din            & اور چیزیں            & অন্যান্য                         \\
+\midrule
+ κρεβάτι             & lit                         & تخت - سرير                      & چهارپایی   & nivîn              & بستر / پلنگ          & বিছানা                           \\
+ κουβέρτα            & couverture                  & بطانية                          & کمپل       & betanî             & کمبل                 & কম্বল                            \\
+ λάμπα               & lampe                       & مصباح / لمبة                    & لامپ       & lambe              & لامپ                 & বাতি                             \\
+ τηλέφωνο            & téléphone                   & تلفون - جوال / الهاتف \textbackslash{} تيليفون & تلفن       & telefon            & ٹیلی فون             & টেলিফোন                          \\
+ κινητό τηλέφωνο     & (téléphone) portable        & جوال / موبايل                   & مبایل      & telefuna desta     & موبائیل فون          & মুঠোফোন/ মোবাইল টেলিফোন / সেলফোন \\
+ ηλεκτρισμός         & électricité                 & كهرباء                          & برق        & ceyran             & بجلی                 & বিদ্যুত / কারেন্ট                \\
+ υπολογιστής         & ordinateur                  & كمبيوتر - حاسوب                 & کامپیوتر   & komputer           & کمپیوٹر              & কম্পিউটার                        \\
+ διαδικτυακή σύνδεση & connexion internet          & اتصال باانترنت                  & انترنت     & giredana internetê & انٹرنٹ کنکشن         & ইন্টারনেট সংযোগ                  \\
+ μπαταρία            & batterie                    & بطارية                          & باطری      & pîl                & باٹری                & ব্যাটারি                         \\
+ δωμάτιο             & chambre                     & غرفة                            & اتاق       & ode                & کمرہ                 & ঘর                               \\
+ καρέκλα             & chaise                      & كرسي                            & چوکی       & kursî              & کرسی                 & চেয়ার                            \\
+ τραπέζι             & table                       & طاولة                           & میز        & mase               & میز                  & টেবিল                            \\
+ τουαλέτα            & toilettes, WC.              & حمام                            & تشناب      & tuwalet            & غصل خانہ / ٹویلٹ     & বাথরুম / টয়লেট                   \\
+ χαρτί τουαλέτας     & papier toilette             & ورق تواليتد                     & کاغذ تشناب & paçikên tuwaletê   & ٹویلٹ کا کاغز        & টয়লেট টিস্যু                     \\
+ οδοντόβουρτσα       & brosse à dent               & فرشاة اسنان                     & مسواک      & firça dirana       & دانت مانجھنے کا برش  & দাঁতের ব্রাশ                     \\
+ οδοντόπαστα         & dentifrice                  & معجون اسنان                     & خمیردندان  & macuna dirana      & ٹوتھ پہسٹ / دنت منجن & টুথপেস্ট                         \\
+ ντους               & douche                      & دوش / حمام                      & شاور       & duş                & شاور                 & শাওয়ার/ গোসল                     \\
+ μπανιέρα            & baignoire                   & مغطس                            & جان شوی    & kuwet              & ٹب                   & বাথটাব                           \\
+ σαπούνι             & Savon                       & صابونة                          & صابون      & sabun              & صابن                 & সাবান                            \\
+ σαμπουάν            & Shampooing                  & شامبو                           & شامپو      & şampuan            & شامپو                & শ্যাম্পু                         \\
+ χαρτομάντηλο        & mouchoir                    & المحارم/المنديل                 & دستمال     & paçikên desta      & رومال                & টিস্যু / রুমাল                   \\
+ ντουλάπι            & placard                     & خزانة                           & کمد        & dolab              & الماری / کابینٹ      & আলমারি                           \\
+ πόρτα               & (la) porte                  & باب                             & دروازه     & derî               & دروازہ               & দরজা                             \\
+ παράθυρο            & (la) fenêtre                & نافذة\textbackslash{} شباك                     & پنجره      & pace               & کهڑکی                & জানালা                           \\
+ τοίχος              & (le) mur                    & حائط                            & دیوار      & dîwar              & دیوار                & দেয়াল                            \\
+ σπίτι               & (la) maison                 & منزل                            & خانه       & mal                & مکان                 & বাড়ি                             \\
+ διαμέρισμα          & (le) logement / appartement & شقة                             & آپارتمان   & avahî              & فلیٹ                 & বাসা                             \\
+ βιβλίο              & (le) livre                  & كتاب                            & کتاب       & pirtûk             & کتاب                 & বই                               \\
+ εφημερίδα           & (le) journal                & جريدة                           & روزنامه    & rojname            & اخبار                & খবরের কাগজ                       \\
+ ραδιόφωνο           & (la) radio                  & مذياع      / رلديو              & رادیو      & radyo              & ریڈیو                & বেতার                            \\
+ τηλεόραση           & (la) télévision             & تلفاز                           & تلویزیون   & televîzyon         & ٹیلی ویژن            & টেলিভিশন / দূরদর্শন              \\
 \midrule
 \bottomrule
 \end{longtable}
